--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,6 +1,9 @@
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
-  height: 100%;
+}
+
+#root {
   width: 100%;
+  height: 100vh;
 }
