--- a/web/src/icon.css
+++ b/web/src/icon.css
@@ -1,13 +1,13 @@
 /* fallback */
-@font-face {
+/* @font-face {
   font-family: "Material Icons";
   font-style: normal;
   font-weight: 400;
   src: url(https://fonts.gstatic.com/s/materialicons/v70/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2)
     format("woff2");
-}
+} */
 
-.material-icons {
+/* .material-icons {
   font-family: "Material Icons";
   font-weight: normal;
   font-style: normal;
@@ -21,4 +21,4 @@
   direction: ltr;
   -webkit-font-feature-settings: "liga";
   -webkit-font-smoothing: antialiased;
-}
+} */
